--- a/papers/INDIN 2017/references.bib
+++ b/papers/INDIN 2017/references.bib
@@ -704,10 +704,9 @@ year = {2016}
 
 @inproceedings{Hontani2012,
   author = {Hontani, Hidekata and Matsuno, Takamiti and Sawada, Yoshihide},
-  booktitle = {CVPR},
+  booktitle = {Computer Vision and Pattern Recognition},
   isbn = {978-1-4673-1226-4},
   pages = {174--181},
-  publisher = {IEEE Computer Society},
   title = {Robust nonrigid ICP using outlier-sparsity regularization.},
   year = 2012
 }
